# spear

./: .gitattributes
engine/: CMakeLists.txt
engine/assets/cube_pets/: License.txt  Overview.html
engine/include/spear/: camera.hh  event_handler.hh  game_object.hh  material.hh  movement_controller.hh  scene_manager.hh  spear.hh  spear_opengl.hh  spear_root.hh  spear_vulkan.hh  transform.hh
engine/include/spear/model/: model_loader.hh  obj_loader.hh
engine/include/spear/physics/bullet/: object.hh
engine/include/spear/rendering/: base_model.hh  base_shader.hh  base_sprite_3d.hh  shader_type.hh
engine/include/spear/rendering/opengl/: material.hh  shader.hh  sprite_3d.hh
engine/include/spear/rendering/vulkan/: frame_context.hh  mesh.hh  renderer.hh  shader.hh  sprite_3d.hh
engine/include/spear/ui/: base_menu_list.hh  base_quad_2d.hh  base_text.hh  base_ui_renderer.hh  menu_list.hh  quad_2d.hh  text.hh  ui_renderer.hh
engine/shaders/: minimal_vulkan_vertex.glsl  textured_vulkan_vertex.glsl  ui_vertex.glsl
engine/src/: camera.cc  event_handler.cc  game_object.cc  material.cc  movement_controller.cc  transform.cc
engine/src/model/: obj_loader.cc
engine/src/physics/bullet/: object.cc
engine/src/rendering/: base_model.cc  base_shader.cc  base_sprite3d.cc  shader_type.cc
engine/src/rendering/opengl/: material.cc  shader.cc  sprite_3d.cc
engine/src/rendering/opengl/model/: obj_model.cc
engine/src/rendering/opengl/shapes/: cube.cc  sphere.cc
engine/src/rendering/vulkan/: frame_context.cc  mesh.cc  renderer.cc  shader.cc
engine/src/rendering/vulkan/core/: command_buffer_manager.cc  device_manager.cc  framebuffer_manager.cc  pipeline_manager.cc  render_pass_manager.cc  synchronization.cc
engine/src/rendering/vulkan/model/: obj_model.cc
engine/src/rendering/vulkan/shapes/: cube.cc  (+1 more)
engine/src/ui/: base_menu_list.cc  menu_list.cc  quad_2d.cc  text.cc  ui_renderer.cc
engine/src/window/: base_window.cc
runtime/vulkan/: CMakeLists.txt  main.cc
(+25 files in other folders)
